--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "vanilla-cookieconsent",
+    "name": "@gothassos/vanilla-cookieconsent",
     "version": "3.0.1",
     "description": "🍪 Simple cross-browser cookie-consent plugin written in vanilla js.",
     "main": "dist/cookieconsent.umd.js",
